feat: add feedback product metrics
